compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let add = fn(x, y) { x + y } 1 |> add(unknown)"
---
----- SOURCE CODE
let add = fn(x, y) { x + y } 1 |> add(unknown)

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:1:39
  │
1 │ let add = fn(x, y) { x + y } 1 |> add(unknown)
  │                                       ^^^^^^^

The name `unknown` is not in scope here.
